--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -4,16 +4,17 @@
 }
 
 .card__name {
-  max-width: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 200px;
+  display: flex;
+  justify-content: center;
   text-align: center;
   background-color: #fff;
   position: relative;
   top: 10px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   color: rgba(0, 0, 0, 0.6);
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 900;
 }
 
 .card__image {
